added function to update
